Create new View Classes, define MainScreen's layout in main.xml, implement new MenuView.